--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -1,7 +1,7 @@
 body {
-    background-color: black;
+    background-color: grey;
 }
 
-h1, p {
-    color: gold;
+h1, h4, p {
+    color: white;
 }
