--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -2,6 +2,13 @@ body {
     background-color: grey;
 }
 
+h1{
+    Impact, Charcoal, sans-serif
+}
+h4{
+    "Comic Sans MS", cursive, sans-serif
+}
 h1, h4, p {
+    
     color: white;
 }
