--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -3,10 +3,10 @@ body {
 }
 
 h1{
-    Impact, Charcoal, sans-serif
+    Impact, Charcoal, sans-serif;
 }
 h4{
-    "Comic Sans MS", cursive, sans-serif
+    "Comic Sans MS", cursive, sans-serif;
 }
 h1, h4, p {
     
