--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -5,12 +5,12 @@ body {
 }
 
 h1{
-   font: Impact, Charcoal, sans-serif;
+   font-family: Impact, Charcoal, sans-serif;
    text-align: justify;
 
 }
 h4{
-    font: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Comic Sans MS", cursive, sans-serif;
     text-align: justify;
 
 }
