--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -1,22 +1,20 @@
 body {
     background-color: grey;
-    text-align: justify;
-
+    text-align: center;
 }
 
 h1{
    font-family: Impact, Charcoal, sans-serif;
-   text-align: justify;
 
 }
+
 h4{
     font-family: "Comic Sans MS", cursive, sans-serif;
-    text-align: justify;
+
 
 }
+
 h1, h4, p {
-    
     color: white;
-    text-align: justify;
 
 }
