--- a/unit_4/style.css
+++ b/unit_4/style.css
@@ -35,7 +35,13 @@ button {
 }
 .aligncenter {
 
-	img align: center;
+	 align: center;
+}
+
+img.acenter {
+display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 .alignright {
 	float: right;
