--- a/unit_8/style.css
+++ b/unit_8/style.css
@@ -14,16 +14,17 @@ pre span {
     text-transform:uppercase;
  }
 div {
-  width: 1050px;
+  width: 100%;
 
 }
 right {
-  width: 150px;
+  width: 10%;
 }
 
 footer {
-width: 1050px;
-
+width: 90%;
+margin-bottom: 10px;
+height: 250px;
 }
 
 #left {
@@ -55,14 +56,14 @@ width: 1050px;
 background-color: #FFED74;
 border: 1px black solid;
 padding: 20px;
-width: 1050px;
+width: 100%;
 }
 
 nav {
 background-color: #E8C66A;
 border: 1px black solid;
 padding: 20px;
-width: 1050px;
+width: 100%;
 }
 
 article {
@@ -75,7 +76,7 @@ width: 1050px;
 footer {
 background-color: #FF957E;
 border: 1px black solid;
-padding: 20px;
+margin-right: 0%;
 }
 
 h1 {
@@ -91,14 +92,10 @@ h4 {
     margin: 1em auto;}
 
   img.displayed {
-    display: inline-block;
-    margin-left: auto;
     margin-right: 7.5em }
 }
 img.displayed1 {
-  display: inline-block;
-  margin-left: 7.5em;
-  margin-right: auto }
+  margin-right: 50% }
 }
 h4.image1 {
 display: inline-block;
@@ -109,9 +106,11 @@ button {
   background-color: lightblue;
   text-align: center;
 }
-.aligncenter {
+p.special {
 
-	img align: center;
+text-align: center;
+font-size: 20px;
+
 }
 .alignright {
 	float: right;
