--- a/unit_8/style.css
+++ b/unit_8/style.css
@@ -32,7 +32,7 @@ height: 250px;
     border: 1px black solid;
     padding: 20px;
     float: left;
-    width: 30%;
+    width: 40%;
 }
 
 #right {
@@ -40,7 +40,7 @@ height: 250px;
     border: 1px black solid;
     padding: 20px;
     float: right;
-    width: 62%;
+    width: 40%;
 }
 
 .clearfix:after {
@@ -95,8 +95,9 @@ h4 {
     margin-right: 7.5em }
 }
 img.displayed1 {
-  margin-right: 50% }
+      margin-right: 20px;
 }
+
 h4.image1 {
 display: inline-block;
   margin-left: 7.5em;
