--- a/unit_8/style.css
+++ b/unit_8/style.css
@@ -10,20 +10,23 @@ pre {
     color:#ffffff;
     background-color:#0b3963;
  }
-pre span {
-    text-transform:uppercase;
- }
+
 div {
   width: 100%;
+}
 
 }
 right {
   width: 10%;
 }
 
+@media screen and (min-width: 768px){
+            .rwd-break { display: none; }
+        }
+
 footer {
 width: 90%;
-margin-bottom: 10px;
+margin-top: 40%;
 height: 250px;
 }
 
@@ -92,9 +95,15 @@ h4 {
     margin: 1em auto;}
 
   img.displayed {
-    margin-right: 7.5em;
+    width: 65%;
+        height: auto;
   }
-
+  img.displayed1 {
+    width: 100%;
+        height: auto;
+  }
+  width: 100%;
+      height: auto;
 
 h4.image1 {
 display: inline-block;
