--- a/unit_8/style.css
+++ b/unit_8/style.css
@@ -3,17 +3,17 @@
 @import url(https://fonts.googleapis.com/css?family=Questrial);
 
 }
-pre {
-    border:5px double #ffffff;
-    font-family:sans-serif;
-    font-size:16px;
-    color:#ffffff;
-    background-color:#0b3963;
- }
+@media only screen and (max-width: 480px)  {
 
-div {
-  width: 100%;
+  #left, #right {
+
+  float: none;
+  width: auto;
+
+  }
+
 }
+
 
 }
 right {
@@ -24,26 +24,21 @@ right {
             .rwd-break { display: none; }
         }
 
-footer {
-width: 90%;
-margin-top: 40%;
-height: 250px;
-}
+
 
 #left {
-    background-color: violet;
-    border: 1px black solid;
-    padding: 20px;
+
     float: left;
     width: 40%;
+    margin-left: 5%;
+
 }
 
 #right {
-    background-color: pink;
-    border: 1px black solid;
-    padding: 20px;
+
     float: right;
     width: 40%;
+    margin-right: 5%;
 }
 
 .clearfix:after {
@@ -56,16 +51,13 @@ height: 250px;
 }
 
  header {
-background-color: #FFED74;
-border: 1px black solid;
-padding: 20px;
+
 width: 100%;
 }
 
 nav {
-background-color: #E8C66A;
 border: 1px black solid;
-padding: 20px;
+padding: 10px;
 width: 100%;
 }
 
@@ -77,10 +69,14 @@ width: 1050px;
 }
 
 footer {
-background-color: #FF957E;
-border: 1px black solid;
+border: 1px black dotted;
 margin-right: 0%;
+width: 100%;
+margin-top: 40%;
+margin-bottom: 0px;
+height: 250px;
 }
+
 
 h1 {
  font-family: 'Questrial', sans-serif;
@@ -101,9 +97,11 @@ h4 {
   img.displayed1 {
     width: 100%;
         height: auto;
+        margin-right: 100px;
   }
-  width: 100%;
-      height: auto;
+@media only screen and (max-width: 550px) {
+
+}
 
 h4.image1 {
 display: inline-block;
@@ -118,7 +116,14 @@ p.special {
 
 text-align: center;
 font-size: 20px;
-
+line-height: 2.5em;
+}
+wrapper {
+  text-align: center;
+}
+a.special{
+  align: center;
+  line-height: 2.5em;
 }
 .alignright {
 	float: right;
